--- a/Segunda práctica/project/src/index.html
+++ b/Segunda práctica/project/src/index.html
@@ -12,7 +12,8 @@
         <script type="text/javascript" src="Ground.js"></script>   
         <script type="text/javascript" src="Robot.js"></script>   
         <script type="text/javascript" src="TheScene.js"></script>    
-        <script type="text/javascript" src="script.js"></script>    
+        <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="Ovo.js"></script>  
         <style>
             body{
                 margin: 0;
