--- a/Segunda práctica/project/src/index.html
+++ b/Segunda práctica/project/src/index.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="../libs/stats.js"></script>
         <script type="text/javascript" src="../libs/dat.gui.js"></script>
         <script type="text/javascript" src="../libs/TrackballControls.js"></script>
+        <script type="text/javascript" src="../libs/tween.js"></script>
         <script type="text/javascript" src="Ground.js"></script>   
         <script type="text/javascript" src="Robot.js"></script>   
         <script type="text/javascript" src="TheScene.js"></script>    
