--- a/Segunda práctica/project/src/index.html
+++ b/Segunda práctica/project/src/index.html
@@ -4,6 +4,10 @@
     <head>
         <title>Segunda practica</title>
         <meta charset="utf-8">
+        <!-- Styles -->
+        <link rel="stylesheet" href="../style/main.css">
+        
+        <!-- Scripts -->
         <script type="text/javascript" src="../libs/three.js"></script>
         <script type="text/javascript" src="../libs/jquery-1.9.0.js"></script>
         <script type="text/javascript" src="../libs/stats.js"></script>
@@ -15,6 +19,8 @@
         <script type="text/javascript" src="TheScene.js"></script>    
         <script type="text/javascript" src="script.js"></script>
         <script type="text/javascript" src="Ovo.js"></script>  
+        <script type="text/javascript" src="EnergyBar.js"></script>
+        <script type="text/javascript" src="Sky.js"></script>
         <style>
             body{
                 margin: 0;
