Create the gamefield, position the camera and the lights, add textures

--- a/Tercera práctica/project/src/index.html
+++ b/Tercera práctica/project/src/index.html
@@ -5,7 +5,7 @@
         <title>Arkanoid 3D</title>
         <meta charset="utf-8">
         <!-- Styles -->
-        <link rel="stylesheet" href="../style/main.css">
+        <!-- <link rel="stylesheet" href="../style/main.css"> -->
         
         <!-- Scripts -->
         <script type="text/javascript" src="../libs/three.js"></script>
@@ -13,7 +13,7 @@
         <script type="text/javascript" src="../libs/stats.js"></script>
         <script type="text/javascript" src="../libs/dat.gui.js"></script>
         <script type="text/javascript" src="../libs/TrackballControls.js"></script>
-        <script type="text/javascript" src="Ground.js"></script>
+        <script type="text/javascript" src="GameField.js"></script>
         <script type="text/javascript" src="TheScene.js"></script>    
         <script type="text/javascript" src="script.js"></script>
         <script type="text/javascript" src="Sky.js"></script>
