--- a/Tercera práctica/project/src/index.html
+++ b/Tercera práctica/project/src/index.html
@@ -17,6 +17,7 @@
         <script type="text/javascript" src="TheScene.js"></script>    
         <script type="text/javascript" src="script.js"></script>
         <script type="text/javascript" src="Sky.js"></script>
+        <script type="text/javascript" src="Platform.js"></script>
         <style>
             body{
                 margin: 0;
