Added brick class

--- a/Tercera práctica/project/src/index.html
+++ b/Tercera práctica/project/src/index.html
@@ -18,6 +18,7 @@
         <script type="text/javascript" src="script.js"></script>
         <script type="text/javascript" src="Sky.js"></script>
         <script type="text/javascript" src="Platform.js"></script>
+        <script type="text/javascript" src="Brick.js"></script>
         <style>
             body{
                 margin: 0;
