Create the ball and move it with the platform when it's paused

--- a/Tercera práctica/project/src/index.html
+++ b/Tercera práctica/project/src/index.html
@@ -19,6 +19,7 @@
         <script type="text/javascript" src="Sky.js"></script>
         <script type="text/javascript" src="Platform.js"></script>
         <script type="text/javascript" src="Brick.js"></script>
+        <script type="text/javascript" src="Ball.js"></script>
         <style>
             body{
                 margin: 0;
