--- a/Tercera práctica/project/src/index.html
+++ b/Tercera práctica/project/src/index.html
@@ -1,70 +1,90 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>Arkanoid 3D</title>
-        <meta charset="utf-8">
-        <!-- Styles -->
-        <link rel="stylesheet" href="../style/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
 
-        <!-- Scripts -->
-        <script type="text/javascript" src="../libs/three.js"></script>
-        <script type="text/javascript" src="../libs/jquery-1.9.0.js"></script>
-        <script type="text/javascript" src="../libs/stats.js"></script>
-        <script type="text/javascript" src="../libs/dat.gui.js"></script>
-        <script type="text/javascript" src="../libs/TrackballControls.js"></script>
-        <script type="text/javascript" src="GameField.js"></script>
-        <script type="text/javascript" src="TheScene.js"></script>    
-        <script type="text/javascript" src="script.js"></script>
-        <script type="text/javascript" src="Sky.js"></script>
-        <script type="text/javascript" src="Platform.js"></script>
-        <script type="text/javascript" src="Brick.js"></script>
-        <script type="text/javascript" src="Ball.js"></script>
-        <style>
-            body{
-                margin: 0;
-                overflow: hidden; 
-            }
-        </style>
-    </head>
-        <body>
+<head>
+    <title>Arkanoid 3D</title>
+    <meta charset="utf-8">
+    <!-- Styles -->
+    <link rel="stylesheet" href="../style/main.css">
+    <!-- Scripts -->
+    <script type="text/javascript" src="../libs/three.js"></script>
+    <script type="text/javascript" src="../libs/jquery-1.9.0.js"></script>
+    <script type="text/javascript" src="../libs/stats.js"></script>
+    <script type="text/javascript" src="../libs/dat.gui.js"></script>
+    <script type="text/javascript" src="../libs/TrackballControls.js"></script>
+    <script type="text/javascript" src="GameField.js"></script>
+    <script type="text/javascript" src="TheScene.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="Sky.js"></script>
+    <script type="text/javascript" src="Platform.js"></script>
+    <script type="text/javascript" src="Brick.js"></script>
+    <script type="text/javascript" src="Ball.js"></script>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
+    </style>
+</head>
 
-        <div id="overlay-container" class="ui-overlay">
-            <h1 id="overlay-title">ARKANOID 3D</h1>
-            <p id="overlay-text">Select level</p>
+<body>
+    <div id="game-title" class="title-container">
+        <h1>ARKANOID 3D</h1>
+        <p>By David Vargas & Andres Molina in May 2018</p>
+        <p>Please select a level and press play</p>
+        <p id="info-text" style="display: none;">
+            ---
+            <br>
+            <br> Arkanoid 3D is a Three.js project, made for the Graphic Systems subject at Universidad de Granada
+            <br>
+            <br> Created in May 2018 by:
+            <br> - David Vargas Carrillo (
+            <a href="http://github.com/dvcarrillo">github.com/dvcarrillo</a>)
+            <br> - Andres Molina Lopez (
+            <a href="http://github.com/dvcarrillo">github.com/dvcarrillo</a>)
+            <br>
+            <br> Project page:
+            <a href="http://github.com/Andresmag/Sistemas_Graficos">github.com/Andresmag/Sistemas_Graficos</a>
+            <br>
+            <br> Many thanks to
+            <a href="http://codepen.io/patrickhlauke/">@patrickhlauke</a> for his 'Annoying CRT retro flicker' design
+        </p>
+        <div class="level-select">
+            <select id="lvl-selection">
+                <!-- Value == number of brick lines -->
+                <option value="2">LVL 1</option>
+                <option value="4">LVL 2</option>
+                <option value="8">LVL 3</option>
+                <option value="10">LVL 4</option>
+                <option value="12">LVL 5</option>
+            </select>
+        </div>
+        <button id="button-play">PLAY</button>
+        <button id="button-info">+INFO</button>
+    </div>
 
-            <form>
-                <div class="input-selection">
-                    <input type="radio" id="button-1" name="selectlevel" value="level1">
-                    <label for="button-1">Level 1</label>
-
-                    <input type="radio" id="button-2" name="selectlevel" value="level2">
-                    <label for="button-2">Level 2</label>
-
-                    <input type="radio" id="button-3" name="selectlevel" value="level3">
-                    <label for="button-3">Level 3</label>
-
-                    <input type="radio" id="button-4" name="selectlevel" value="level4">
-                    <label for="button-4">Level 4</label>
-
-                    <button id="button-play">PLAY</button>
-                </div>
-            </form>
+    <div id="game-container" class="game">
+        <!-- Div which will show several messages -->
+        <div style="position:absolute; left:100px; top:10px" id="Messages">
         </div>
 
-        <div id="game-container" class="game">
-            <!-- Div which will show statistical information -->
-            <div id="Stats-output">
-            </div>
-
-            <!-- Div which will show several messages -->
-            <div style="position:absolute; left:100px; top:10px" id="Messages">
-            </div>
-
-            <!-- Div which will hold the Output -->
-            <div id="WebGL-output">
-            </div>
+        <!-- Div which will hold the Output -->
+        <div id="WebGL-output">
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
+
+<script>
+    $("#button-info").click(function () {
+        if ($("#info-text").css("display") == "none") {
+            $("#info-text").css("display", "block");
+            $(this).html("CLOSE");
+        } else {
+            $("#info-text").css("display", "none");
+            $(this).html("+INFO");
+        }
+    });
+</script>
