Small refinements to previous commit

--- a/Tercera práctica/project/src/index.html
+++ b/Tercera práctica/project/src/index.html
@@ -29,10 +29,12 @@
 </head>
 
 <body>
-    <div id="game-title" class="title-container">
-        <h1>ARKANOID 3D</h1>
-        <p>By David Vargas & Andres Molina in May 2018</p>
-        <p>Please select a level and press play</p>
+    <div id="game-title-screen" class="title-container">
+        <h1 id="screen-title">ARKANOID 3D</h1>
+        <p id="screen-subtitle">
+            By David Vargas & Andres Molina in May 2018<br><br>
+            Please select a level and press play
+        </p>
         <p id="info-text" style="display: none;">
             ---
             <br>
