Added points and minor corrections

--- a/Tercera práctica/project/src/index.html
+++ b/Tercera práctica/project/src/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Arkanoid 3D</title>
+    <title>..:: Arkanoid 3D ::..</title>
     <meta charset="utf-8">
     <!-- Styles -->
     <link rel="stylesheet" href="../style/main.css">
@@ -38,7 +38,7 @@
         <p id="info-text" style="display: none;">
             ---
             <br>
-            <br> Arkanoid 3D is a Three.js project, made for the Graphic Systems subject at Universidad de Granada
+            <br> Arkanoid 3D is a Three.js project made for the Graphic Systems subject at Universidad de Granada
             <br>
             <br> Created in May 2018 by:
             <br> - David Vargas Carrillo (
@@ -70,7 +70,6 @@
         <!-- Div which will show several messages -->
         <div style="position:absolute; left:100px; top:10px" id="Messages">
         </div>
-
         <!-- Div which will hold the Output -->
         <div id="WebGL-output">
         </div>
