Corrections on info box

--- a/Tercera práctica/project/src/index.html
+++ b/Tercera práctica/project/src/index.html
@@ -38,13 +38,11 @@
         <p id="info-text" style="display: none;">
             ---
             <br>
-            <br> Arkanoid 3D is a Three.js project made for the Graphic Systems subject at Universidad de Granada
+            <br> Arkanoid 3D is a Three.js project for the Graphic Systems course at Universidad de Granada
             <br>
             <br> Created in May 2018 by:
-            <br> - David Vargas Carrillo (
-            <a href="http://github.com/dvcarrillo">github.com/dvcarrillo</a>)
-            <br> - Andres Molina Lopez (
-            <a href="http://github.com/dvcarrillo">github.com/dvcarrillo</a>)
+            <br> - David Vargas Carrillo (<a href="http://github.com/dvcarrillo">github.com/dvcarrillo</a>)
+            <br> - Andres Molina Lopez (<a href="http://github.com/Andresmag">github.com/Andresmag</a>)
             <br>
             <br> Project page:
             <a href="http://github.com/Andresmag/Sistemas_Graficos">github.com/Andresmag/Sistemas_Graficos</a>
