Added specialObject class

--- a/Tercera práctica/project/src/index.html
+++ b/Tercera práctica/project/src/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="Platform.js"></script>
     <script type="text/javascript" src="Brick.js"></script>
     <script type="text/javascript" src="Ball.js"></script>
+    <script type="text/javascript" src="SpecialObject.js"></script>
     <style>
         body {
             margin: 0;
