Correct wall bug and add time trial mode

--- a/Tercera práctica/project/src/index.html
+++ b/Tercera práctica/project/src/index.html
@@ -59,6 +59,7 @@
                 <option value="8">LVL 3</option>
                 <option value="10">LVL 4</option>
                 <option value="12">LVL 5</option>
+                <option value="6">Time</option>
             </select>
         </div>
         <button id="button-play">PLAY</button>
