--- a/Tercera práctica/project/src/index.html
+++ b/Tercera práctica/project/src/index.html
@@ -46,7 +46,7 @@
             <br> - Andres Molina Lopez (<a href="http://github.com/Andresmag">github.com/Andresmag</a>)
             <br>
             <br> Project page:
-            <a href="http://github.com/Andresmag/Sistemas_Graficos">github.com/Andresmag/Sistemas_Graficos</a>
+            <a href="https://github.com/dvcarrillo/web-graphics">github.com/dvcarrillo/web-graphics</a>
             <br>
             <br> Many thanks to
             <a href="http://codepen.io/patrickhlauke/">@patrickhlauke</a> for his 'Annoying CRT retro flicker' design
